6662086: 6u4+, 7b11+: CMS never clears referents when -XX:+ParallelRefProcEnabled

Construct the relevant CMSIsAliveClosure used by CMS during parallel reference processing with the correct span. It had incorrectly been constructed with an empty span, a regression introduced in 6417901.

Reviewed-by: jcoomes